--- a/summary.tex
+++ b/summary.tex
@@ -40,8 +40,9 @@ will talk about uncertainty later on.
 \[
 	p(\theta|y) = \frac{p(y,\theta)}{p(y)} = \frac{p(\theta)p(y|\theta)}{p(y)}.
 \]
-In practice, the factor $p(y)$ is nothing to worry about since we can obtain it by integrating away $\theta$ in the following way,
-$p(y) = \int p(y|\theta)p(\theta)d\theta$.
+In practice, the factor $p(y)$ is nothing to worry about since we can obtain it
+by integrating away $\theta$ in the following way, $p(y) = \int
+	p(y|\theta)p(\theta)d\theta$.
 
 \section{Graphical models}
 We observe a set of points $y_1, \dots, y_n$.
